<resources>
    <string name="app_name">Black Books</string>
    <string name="action_add_authors">Add authors</string>
    <string name="action_add_categories">Add categories</string>
    <string name="action_add_manually">Add manually</string>
    <string name="action_delete_book">Delete book</string>
    <string name="action_delete_category">Delete category</string>
    <string name="action_edit_book">Edit book</string>
    <string name="action_edit_category">Edit category</string>
    <string name="action_enter_isbn">Enter ISBN</string>
    <string name="action_export_books">Export books</string>
    <string name="action_loan_book">Loan book</string>
    <string name="action_lookup_isbn">Lookup ISBN</string>
    <string name="action_mark_book_as_favourite">Mark as favourite</string>
    <string name="action_mark_book_as_read">Mark as read</string>
    <string name="action_pick_image">Pick an image</string>
    <string name="action_remove_thumbnail">Remove thumbnail</string>
    <string name="action_return_book">Return book</string>
    <string name="action_save_book">Save</string>
    <string name="action_scan_isbn">Scan ISBN</string>
    <string name="action_search_author_on_amazon">Books of the author on Amazon</string>
    <string name="action_sort_by_author">By author</string>
    <string name="action_sort_by_book_location">By location</string>
    <string name="action_sort_by_category">By category</string>
    <string name="action_sort_by_favourite">Favourites/other books</string>
    <string name="action_sort_by_first_letter">By first letter of the title</string>
    <string name="action_sort_by_language">By language</string>
    <string name="action_sort_by_loaned">Loaned/available</string>
    <string name="action_sort_by_to_read_read">To read/read</string>
    <string name="action_sort_by_series">By series</string>
    <string name="action_take_picture">Take a picture</string>
    <string name="action_unmark_book_as_favourite">Unmark as favourite</string>
    <string name="action_mark_book_as_to_read">Add to the books to read</string>
    <string name="button_add_author">Add</string>
    <string name="button_add_category">Add</string>
    <string name="button_cancel_edit_author">Cancel</string>
    <string name="button_cancel_edit_category">Cancel</string>
    <string name="button_cancel_scanner_install">Cancel</string>
    <string name="button_cancel_send_log">Close</string>
    <string name="button_edit_authors">Add author(s)</string>
    <string name="button_edit_categories">Add categories</string>
    <string name="button_go_to_pic2shop_page">OK</string>
    <string name="button_remove_author">X</string>
    <string name="button_remove_category">X</string>
    <string name="button_save_author">Save</string>
    <string name="button_save_category">Save</string>
    <string name="button_send_log">Send error report</string>
    <string name="error_connection_problem">Connection problem. Make sure the device has access to the Internet.</string>
    <string name="field_invalid_date">Invalid date.</string>
    <string name="field_invalid_loan_date">The date must be before today\'s date.</string>
    <string name="field_mandatory">This field is mandatory.</string>
    <string name="footer_fragment_books_by_author">%1$s, %2$s</string>
    <string name="footer_fragment_books_by_book_location">%1$s, %2$s</string>
    <string name="footer_fragment_books_by_category">%1$s, %2$s</string>
    <string name="footer_fragment_books_by_favourite">%1$s, %2$s</string>
    <string name="footer_fragment_books_by_first_letter">%s</string>
    <string name="footer_fragment_books_by_language">%1$s, %2$s</string>
    <string name="footer_fragment_books_by_loaned">%1$s, %2$s/%3$s</string>
    <string name="footer_fragment_books_by_to_read_read">%1$s, %2$s/%3$s</string>
    <string name="footer_fragment_books_by_series">%1$s, %2$s</string>
    <string name="header_available">Available</string>
    <string name="header_favourite">Favourites</string>
    <string name="header_loaned">Loaned</string>
    <string name="header_other_books">Other books</string>
    <string name="header_read">Read</string>
    <string name="header_to_read">To read</string>
    <string name="hint_search">Search books</string>
    <string name="image_thumbnail">Thumbnail</string>
    <string name="label_author">Author</string>
    <string name="label_authors_format">by %s</string>
    <string name="label_authors">Author(s)</string>
    <string name="label_book_location">Location</string>
    <string name="label_category">Category</string>
    <string name="label_categories">Categories</string>
    <string name="label_column_separator">Column separator</string>
    <string name="label_column_separator_comma">Comma (,)</string>
    <string name="label_column_separator_pipe">Pipe (|)</string>
    <string name="label_column_separator_semicolon">Semicolon (;)</string>
    <string name="label_column_separator_space">Space</string>
    <string name="label_column_separator_tab">Tab</string>
    <string name="label_comment">Comment</string>
    <string name="label_description">Description</string>
    <string name="label_drawer_item">Drawer item</string>
    <string name="label_drawer_item_group">Drawer item group</string>
    <string name="label_drawer_open">Open drawer</string>
    <string name="label_drawer_close">Close drawer</string>
    <string name="label_export_preview">Export preview (5 first books)</string>
    <string name="label_favourite">This is a favourite book</string>
    <string name="label_first_row_contains_header">First row contains headers</string>
    <plurals name="label_footer_authors">
        <item quantity="one">%d author</item>
        <item quantity="other">%d authors</item>
    </plurals>
    <plurals name="label_footer_available">
        <item quantity="one">%d available</item>
        <item quantity="other">%d available</item>
    </plurals>
    <plurals name="label_footer_book_locations">
        <item quantity="one">%d location</item>
        <item quantity="other">%d locations</item>
    </plurals>
    <plurals name="label_footer_books">
        <item quantity="one">%d book</item>
        <item quantity="other">%d books</item>
    </plurals>
    <plurals name="label_footer_categories">
        <item quantity="one">%d category</item>
        <item quantity="other">%d categories</item>
    </plurals>
    <plurals name="label_footer_favourite">
        <item quantity="one">%d favourite</item>
        <item quantity="other">%d favourites</item>
    </plurals>
    <plurals name="label_footer_language">
        <item quantity="one">%d language</item>
        <item quantity="other">%d languages</item>
    </plurals>
    <plurals name="label_footer_loaned">
        <item quantity="one">%d loaned</item>
        <item quantity="other">%d loaned</item>
    </plurals>
    <plurals name="label_footer_read">
        <item quantity="one">%d read</item>
        <item quantity="other">%d read</item>
    </plurals>
    <plurals name="label_footer_series">
        <item quantity="one">%d series</item>
        <item quantity="other">%d series</item>
    </plurals>
    <plurals name="label_footer_to_read">
        <item quantity="one">%d to read</item>
        <item quantity="other">%d to read</item>
    </plurals>
    <plurals name="label_n_days_ago">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="label_n_months_ago">
        <item quantity="one">%d month ago</item>
        <item quantity="other">%d months ago</item>
    </plurals>
    <plurals name="label_n_years_ago">
        <item quantity="one">%d year ago</item>
        <item quantity="other">%d years ago</item>
    </plurals>
    <string name="label_image">Image</string>
    <string name="label_isbn">ISBN</string>
    <string name="label_isbn10">ISBN-10</string>
    <string name="label_isbn13">ISBN-13</string>
    <string name="label_language">Language</string>
    <string name="label_loan_book_date">Loan date</string>
    <string name="label_loan_book_date_format">dd/mm/yyyy</string>
    <string name="label_loan_book_pick_contact">Pick a contact</string>
    <string name="label_loan_book_pick_date">Pick a date</string>
    <string name="label_loan_book_to">Loan the book to</string>
    <string name="label_loan_book_to_hint">Enter a name</string>
    <string name="label_loaned">Loaned</string>
    <string name="label_loaned_to">This book has been loaned to</string>
    <string name="label_loan_date_format">%1$s (%2$s)</string>
    <string name="label_no_language">(No language set)</string>
    <string name="label_page_count">Page count</string>
    <string name="label_page_count_format">%d pages</string>
    <string name="label_pick_published_date">Pick a published date</string>
    <string name="label_publisher">Publisher</string>
    <string name="label_published_date">Published date</string>
    <string name="label_published_date_hint">dd/mm/yyyy</string>
    <string name="label_read">I have read this book</string>
    <string name="label_series">Series</string>
    <string name="label_series_number_format">(%d)</string>
    <string name="label_series_number">#</string>
    <string name="label_subtitle">Subtitle</string>
    <plurals name="label_summary_authors">
        <item quantity="one">author</item>
        <item quantity="other">authors</item>
    </plurals>
    <plurals name="label_summary_books">
        <item quantity="one">book</item>
        <item quantity="other">books</item>
    </plurals>
    <plurals name="label_summary_categories">
        <item quantity="one">category</item>
        <item quantity="other">categories</item>
    </plurals>
    <plurals name="label_summary_favourites">
        <item quantity="one">favourite</item>
        <item quantity="other">favourites</item>
    </plurals>
    <plurals name="label_summary_languages">
        <item quantity="one">language</item>
        <item quantity="other">languages</item>
    </plurals>
    <plurals name="label_summary_loaned">
        <item quantity="one">loaned</item>
        <item quantity="other">loaned</item>
    </plurals>
    <plurals name="label_summary_locations">
        <item quantity="one">location</item>
        <item quantity="other">locations</item>
    </plurals>
    <plurals name="label_summary_to_read">
        <item quantity="one">to read</item>
        <item quantity="other">to read</item>
    </plurals>
    <plurals name="label_summary_series">
        <item quantity="one">series</item>
        <item quantity="other">series</item>
    </plurals>
    <string name="label_text_qualifier">Text qualifier</string>
    <string name="label_text_qualifier_double_quote">Double quote (\")</string>
    <string name="label_text_qualifier_single_quote">Single quote (\')</string>
    <string name="label_title">Title</string>
    <string name="label_today">Today</string>
    <string name="label_total">(%d)</string>
    <string name="label_unexpected_error">Unexpected error</string>
    <string name="label_unspecified_author">(Unspecified author)</string>
    <string name="label_unspecified_book_location">(Unspecified location)</string>
    <string name="label_unspecified_category">(Unspecified category)</string>
    <string name="label_unspecified_language">(Unspecified language)</string>
    <string name="label_unspecified_series">(Unspecified series)</string>
    <string name="menu_add_books">Add books</string>
    <string name="menu_administration">Administration</string>
    <string name="menu_search">Search books</string>
    <string name="menu_sort">Sort</string>
    <string name="message_send_log">Black Books has encountered an unexpected error.\n\nTo help us fix the problem, click \"Send error report\" to send us a log file. Don\'t hesitate to describe what you were doing when the problem occurred.\n\nThank you.</string>
</resources>