<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/bookList_menuSort"
        android:icon="@drawable/ic_action_sort_by_size"
        android:showAsAction="ifRoom"
        android:title="@string/menu_sort">
        <menu>
            <item
                android:id="@+id/bookList_actionSortByAuthor"
                android:icon="@drawable/ic_action_person"
                android:title="@string/action_sort_by_author"/>
            <item
                android:id="@+id/bookList_actionSortByFirstLetter"
                android:icon="@drawable/ic_action_brightness_auto"
                android:title="@string/action_sort_by_first_letter"/>
            <item
                android:id="@+id/bookList_actionSortByCategory"
                android:icon="@drawable/ic_action_labels"
                android:title="@string/action_sort_by_category"/>
            <item
                android:id="@+id/bookList_actionSortByBookshelf"
                android:icon="@drawable/ic_action_bookshelf"
                android:title="@string/action_sort_by_bookshelf"/>
            <item
                android:id="@+id/bookList_actionSortByLanguage"
                android:icon="@drawable/ic_action_map"
                android:title="@string/action_sort_by_language"/>
        </menu>
    </item>
    <item
        android:id="@+id/bookList_actionSearch"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_search">
    </item>

</menu>