<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/bookEdit_progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/bookEdit_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".BookEdit" >

            <ImageView
                android:id="@+id/bookEdit_buttonThumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/image_thumbnail"
                android:src="@drawable/ic_undefined_thumbnail" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_title" />

            <EditText
                android:id="@+id/bookEdit_textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_title"
                android:inputType="textCapSentences" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_subtitle" />

            <EditText
                android:id="@+id/bookEdit_textSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_subtitle"
                android:inputType="textCapSentences" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_language" />

            <Spinner
                android:id="@+id/bookEdit_spinnerLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_authors" />

            <Button
                android:id="@+id/bookEdit_buttonEditAuthors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/button_edit_authors" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_isbn" />

            <EditText
                android:id="@+id/bookEdit_textIsbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_isbn"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_page_count" />

            <EditText
                android:id="@+id/bookEdit_textPageCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_page_count"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_publisher" />

            <AutoCompleteTextView
                android:id="@+id/bookEdit_textPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_publisher"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_published_date" />

            <EditText
                android:id="@+id/bookEdit_textPublishedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_published_date"
                android:inputType="date" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_categories" />

            <Button
                android:id="@+id/bookEdit_buttonEditCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/button_edit_categories" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_description" />

            <EditText
                android:id="@+id/bookEdit_textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_description"
                android:inputType="textCapSentences|textMultiLine" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>